Fix "layout shift" due to company logo image
Fixes #30

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -9,10 +9,6 @@
 
 a.navbar-brand {
   max-width: 200px;
-
-  img {
-    width: 100%;
-  }
 }
 
 @media (min-width: 576px) {
